--- a/www/index.html
+++ b/www/index.html
@@ -49,9 +49,9 @@
         for(var i=0; i<results.length; i++) {
           var data = results[i].get("text");
           var update = results[i].get("updateDate");
-          msg += data +":"+ update +"<br>";
+          msg += "<tr><th>"+data +"</th><th>"+ update +"<br></th></tr>";
         }  
-      $("#message").html(msg);
+      $("#message").html("<table><tr><th>text</th><th>Update Date</th></tr><br>"+msg+"</table>");
       })
     } 
     </script>
